# CoreMLPipelines

./: Package.resolved  Package.swift  README.md
.github/workflows/: CI.yml
.swiftpm/xcode/xcshareddata/xcschemes/: coremltoolkit-cli.xcscheme
Sources/CoreMLPipelines/: Signposter.swift  TextGenerationPipeline.swift
Sources/CoreMLPipelines/Extensions/: MLTensor+Extensions.swift
Sources/CoreMLPipelines/Models/: CausalLMModel.swift
Sources/CoreMLPipelines/Pipelines/: TextGenerationPipeline+Models.swift  TextGenerationPipeline.swift
Sources/CoreMLPipelines/Samplers/: GreedySampler.swift  Sampler.swift
Sources/CoreMLPipelinesCLI/: ChatCLI.swift  CoreMLPipelinesCLI.swift  ProfileCLI.swift  TextGenerationCLI.swift
Sources/CoreMLPipelinesCLI/Extensions/: TextGenerationPipeline+Extensions.swift
Tests/CoreMLPipelinesTests/: SamplerTests.swift  TensorTests.swift
coremlpipelinestools/: CausalLM.py  README.md  pyproject.toml
